--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body onload="init()">
     <h1>Image-Gallery</h1>
-<div></div>
+    <div></div>
 
     <div class="gallery"></div>
 
@@ -22,8 +22,11 @@
         <div class="canvas-container">
             <canvas id="my-canvas" width="500" height="500" style="outline:2px solid blue"></canvas>
             <!-- <img src="img/1.jpg" alt="" style="display:none;"> -->
-
+            <div class="img-container"></div>
         </div>
+    </div>
+    <div>
+
     </div>
 
     <section class="control-box">
