--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
                 alt="trash">
             <img class="btn" onclick="largerText()" src="img/ICONS/increase font - icon.png" alt="trash">
             <img class="btn" onclick="smallerText()" src="img/ICONS/decrease font - icon.png" alt="trash">
-            <img class="btn" onclick="clearCanvas()" src="img/ICONS/align-to-left.png" alt="trash">
-            <img class="btn" onclick="clearCanvas()" src="img/ICONS/center-text-alignment.png" alt="trash">
-            <img class="btn" onclick="clearCanvas()" src="img/ICONS/align-to-right.png" alt="trash">
-            <img class="btn" onclick="clearCanvas()" src="img/ICONS/text stroke.png" alt="trash">
-            <img class="btn" onclick="clearCanvas()" src="img/ICONS/paint-board-and-brush.png" alt="trash">
+            <img class="btn" onclick="alignToLeft()" src="img/ICONS/align-to-left.png" alt="trash">
+            <img class="btn" onclick="alignToCenter()" src="img/ICONS/center-text-alignment.png" alt="trash">
+            <img class="btn" onclick="alignToRight()" src="img/ICONS/align-to-right.png" alt="trash">
+            <img class="btn" onclick="setStrokeColor(this.value)" src="img/ICONS/text stroke.png" alt="trash">
+            <img class="btn" onclick="setFillColor(this.value)" src="img/ICONS/paint-board-and-brush.png" alt="trash">
             <input type="color" id="color" name="color-line"  value="#ff0000" oninput="setStrokeColor(this.value)" />
-            <input type="color" id="color" name="color-line"  value="#ff0000" oninput="setFillColor(this.value)" />
+            <input type="color" id="color" name="color-line"  value="#ff0000" oninput="setFillColor(this.value)" >
             <button onclick="uploadImg()">Share</button>
             <button>Download</button>
             <a class="btn-save" href="#" onclick="downloadCanvas(this)" download="myphoto">Save</a>
