--- a/index.html
+++ b/index.html
@@ -12,56 +12,64 @@
 
 <body onload="init()">
     <div class="Image-Gallery">
-       <nav>
-        <h1>memegen</h1>
-        <ul>
-            <li>Gallery</li>
-            <li>About</li>
-        </ul>
-       </nav> 
-       <div>
-           <input type="text" placeholder="Enter searh keyword"> 
-       </div>
+        <header class="main-header flex space-between align-center">
+            <h1>memegen</h1>
+        </header>
+        <input type="text" placeholder="Enter searh keyword">
+
 
         <div class="gallery"></div>
 
     </div>
 
-<div class="Meme-Editor hide">
 
 
-    <div>
-        <h1> Meme-Editor </h1>
-        <div class="canvas-container" >
-            <canvas id="my-canvas" width="500" height="500" onclick="draw(event)"
-                style="outline:2px solid blue"></canvas>
-            <div class="img-container"></div>
-        </div>
+    <div class="Meme-Editor hide">
+
+        <container class="flex-direction">
+
+
+            <div class="main-header">
+                <h1>memegen</h1>
+                <nav>
+                    <ul class="main-nav clean-list flex flex-direction space-between">
+                        <li onclick="btnBackToGallery()">Gallery</li>
+                        <li>About</li>
+                    </ul>
+                </nav>
+                <div class="canvas-container">
+                    <btn>back to gallery</btn>
+                    <canvas id="my-canvas" width="500" height="500" style="outline:2px solid black"></canvas>
+                    <div class="img-container"></div>
+                </div>
+
+
+
+                <section class="control-box flex align-center flex-direction">
+                    <input class="txt-img" type="text" placeholder="text line" oninput="onAddTxt(this.value)">
+                    <img class="btn" onclick="clearCanvas()" src="img/ICONS/trash.png" alt="trash">
+                    <img class="btn" onclick="addTextLine()" src="img/ICONS/add.png" alt="add">
+                    <img class="btn" onclick="switchLines()"
+                        src="img/ICONS/up-and-down-opposite-double-arrows-side-by-side.png" alt="trash">
+                    <img class="btn" onclick="largerText()" src="img/ICONS/increase font - icon.png" alt="trash">
+                    <img class="btn" onclick="smallerText()" src="img/ICONS/decrease font - icon.png" alt="trash">
+                    <img class="btn" onclick="alignToLeft()" src="img/ICONS/align-to-left.png" alt="trash">
+                    <img class="btn" onclick="alignToCenter()" src="img/ICONS/center-text-alignment.png" alt="trash">
+                    <img class="btn" onclick="alignToRight()" src="img/ICONS/align-to-right.png" alt="trash">
+                    <img class="btn" onclick="setStrokeColor(this.value)" src="img/ICONS/text stroke.png" alt="trash">
+                    <img class="btn" onclick="setFillColor(this.value)" src="img/ICONS/paint-board-and-brush.png"
+                        alt="trash">
+                    <input type="color" id="color" name="color-line" value="#ff0000"
+                        oninput="setStrokeColor(this.value)" />
+                    <input type="color" id="color" name="color-line" value="#ff0000" oninput="setFillColor(this.value)">
+                    <button onclick="uploadImg()">Share</button>
+                    <button>Download</button>
+                    <a class="btn-save" href="#" onclick="downloadCanvas(this)" download="myphoto">Save</a>
+            </div>
+            </section>
     </div>
-    
-
-    <section class="control-box">
-        <input class="txt-img" type="text" placeholder="text line" oninput="onAddTxt(this.value)">
-        <div class="select-container">
-            <img class="btn" onclick="clearCanvas()" src="img/ICONS/trash.png" alt="trash">
-            <img class="btn" onclick="addTextLine()" src="img/ICONS/add.png" alt="add">
-            <img class="btn" onclick="switchLines()" src="img/ICONS/up-and-down-opposite-double-arrows-side-by-side.png"
-                alt="trash">
-            <img class="btn" onclick="largerText()" src="img/ICONS/increase font - icon.png" alt="trash">
-            <img class="btn" onclick="smallerText()" src="img/ICONS/decrease font - icon.png" alt="trash">
-            <img class="btn" onclick="alignToLeft()" src="img/ICONS/align-to-left.png" alt="trash">
-            <img class="btn" onclick="alignToCenter()" src="img/ICONS/center-text-alignment.png" alt="trash">
-            <img class="btn" onclick="alignToRight()" src="img/ICONS/align-to-right.png" alt="trash">
-            <img class="btn" onclick="setStrokeColor(this.value)" src="img/ICONS/text stroke.png" alt="trash">
-            <img class="btn" onclick="setFillColor(this.value)" src="img/ICONS/paint-board-and-brush.png" alt="trash">
-            <input type="color" id="color" name="color-line"  value="#ff0000" oninput="setStrokeColor(this.value)" />
-            <input type="color" id="color" name="color-line"  value="#ff0000" oninput="setFillColor(this.value)" >
-            <button onclick="uploadImg()">Share</button>
-            <button>Download</button>
-            <a class="btn-save" href="#" onclick="downloadCanvas(this)" download="myphoto">Save</a>
-        </div>
-    </section>
-</div>
+    </div>
+    </container>
     <script src="js/main.js"></script>
     <script src="js/utill.js"></script>
     <script src="js/meme-service.js"></script>
