--- a/index.html
+++ b/index.html
@@ -11,13 +11,28 @@
 </head>
 
 <body onload="init()">
+    <header class="main-header">
+        <div class="header-container flex space-between align-center">
+            <h1 class="logo">memegen</h1>
+            <nav>
+                <ul class="main-nav clean-list flex">
+                    <li onclick="btnBackToGallery()">Gallery</li>
+                    <li>|</li>
+                    <li>About</li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    
+
     <div class="Image-Gallery">
-        <header class="main-header flex space-between align-center">
-            <h1>memegen</h1>
-        </header>
-        <input type="text" placeholder="Enter searh keyword">
-
-
+       
+        <div class="search-line">
+            <input class="search" type="text" placeholder="Enter searh keyword">
+            <button type="submit" class="searchButton">
+                <i class="fa fa-search"></i>
+            </button>
+        </div>
         <div class="gallery"></div>
 
     </div>
@@ -30,46 +45,68 @@
 
 
             <div class="main-header">
-                <h1>memegen</h1>
-                <nav>
-                    <ul class="main-nav clean-list flex flex-direction space-between">
-                        <li onclick="btnBackToGallery()">Gallery</li>
-                        <li>About</li>
-                    </ul>
-                </nav>
-                <div class="canvas-container">
-                    <btn>back to gallery</btn>
-                    <canvas id="my-canvas" width="500" height="500" style="outline:2px solid black"></canvas>
-                    <div class="img-container"></div>
+
+                <div class="flex flex-direction">
+                    <div class="canvas-container">
+                        <btn>back to gallery</btn>
+                        <canvas id="my-canvas" width="541" height="599.58" style="outline:2px solid black"></canvas>
+                        <div class="img-container"></div>
+                    </div>
+
+
+
+                    <section class="control-box flex align-center flex-direction">
+
+                        <input class="txt-img" type="text" placeholder="text line" oninput="onAddTxt(this.value)">
+                        <div class="first-line-btn">
+                            <img class="btn" onclick="switchLines()"
+                                src="img/ICONS/up-and-down-opposite-double-arrows-side-by-side.png" alt="trash">
+                            <img class="btn" onclick="addTextLine()" src="img/ICONS/add.png" alt="add">
+                            <img class="btn" onclick="clearCanvas()" src="img/ICONS/trash.png" alt="trash">
+                        </div>
+                        <div class="second-line-btn">
+
+                            <img class="btn" onclick="largerText()" src="img/ICONS/increase font - icon.png"
+                                alt="trash">
+                            <img class="btn" onclick="smallerText()" src="img/ICONS/decrease font - icon.png"
+                                alt="trash">
+                            <img class="btn" onclick="alignToLeft()" src="img/ICONS/align-to-left.png" alt="trash">
+                            <img class="btn" onclick="alignToCenter()" src="img/ICONS/center-text-alignment.png"
+                                alt="trash">
+                            <img class="btn" onclick="alignToRight()" src="img/ICONS/align-to-right.png" alt="trash">
+
+                        </div>
+                        <div calss="third-line-btn">
+                            <img class="btn" onclick="setStrokeColor(this.value)" src="img/ICONS/text stroke.png"
+                                alt="trash">
+                            <img class="btn" onclick="setFillColor(this.value)"
+                                src="img/ICONS/paint-board-and-brush.png" alt="trash">
+                            <input type="color" id="color" name="color-line" value="#ff0000"
+                                oninput="setStrokeColor(this.value)" />
+                            <input type="color" id="color" name="color-line" value="#ff0000"
+                                oninput="setFillColor(this.value)">
+                        </div>
+                        <div>
+
+                            <button onclick="uploadImg()">Share</button>
+                            <button>Download</button>
+                            <a class="btn-save" href="#" onclick="downloadCanvas(this)" download="myphoto">Save</a>
+
+                        </div>
+
+
                 </div>
-
-
-
-                <section class="control-box flex align-center flex-direction">
-                    <input class="txt-img" type="text" placeholder="text line" oninput="onAddTxt(this.value)">
-                    <img class="btn" onclick="clearCanvas()" src="img/ICONS/trash.png" alt="trash">
-                    <img class="btn" onclick="addTextLine()" src="img/ICONS/add.png" alt="add">
-                    <img class="btn" onclick="switchLines()"
-                        src="img/ICONS/up-and-down-opposite-double-arrows-side-by-side.png" alt="trash">
-                    <img class="btn" onclick="largerText()" src="img/ICONS/increase font - icon.png" alt="trash">
-                    <img class="btn" onclick="smallerText()" src="img/ICONS/decrease font - icon.png" alt="trash">
-                    <img class="btn" onclick="alignToLeft()" src="img/ICONS/align-to-left.png" alt="trash">
-                    <img class="btn" onclick="alignToCenter()" src="img/ICONS/center-text-alignment.png" alt="trash">
-                    <img class="btn" onclick="alignToRight()" src="img/ICONS/align-to-right.png" alt="trash">
-                    <img class="btn" onclick="setStrokeColor(this.value)" src="img/ICONS/text stroke.png" alt="trash">
-                    <img class="btn" onclick="setFillColor(this.value)" src="img/ICONS/paint-board-and-brush.png"
-                        alt="trash">
-                    <input type="color" id="color" name="color-line" value="#ff0000"
-                        oninput="setStrokeColor(this.value)" />
-                    <input type="color" id="color" name="color-line" value="#ff0000" oninput="setFillColor(this.value)">
-                    <button onclick="uploadImg()">Share</button>
-                    <button>Download</button>
-                    <a class="btn-save" href="#" onclick="downloadCanvas(this)" download="myphoto">Save</a>
             </div>
             </section>
     </div>
     </div>
     </container>
+
+    <footer>
+        <h1>memegen</h1>
+        <p>all rights reserved 2019</p>
+    </footer>
+
     <script src="js/main.js"></script>
     <script src="js/utill.js"></script>
     <script src="js/meme-service.js"></script>
