--- a/index.html
+++ b/index.html
@@ -94,11 +94,11 @@
                         <div calss="forth-line-btn">
 
                             <button class="btn2 share" onclick="uploadImg()">Share</button>
-                            <button class="btn2 share">Download</button>
-                            <a class="btn-save" href="#" onclick="downloadCanvas(this)" download="myphoto">Save</a>
+                            <!-- <button class="btn2 share">Download</button> -->
+                            <a class="btn-save share" href="#" onclick="downloadCanvas(this)" download="myphoto">Save</a>
 
                         </div>
-
+                        <div class="share-container"></div>
 
                 </div>
             </div>
