update the size

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
             <div>
 
-                <div class="flex flex-direction">
+                <div class="meme flex flex-direction">
                     <div class="canvas-container">
                         <!-- <btn>back to gallery</btn> -->
                         <canvas id="my-canvas" width="541" height="599.58" style="outline:2px solid black"></canvas>
